fixed overflow

--- a/client/src/components/styles/Tab.css
+++ b/client/src/components/styles/Tab.css
@@ -4,9 +4,9 @@
   color: #607b96;
   position: absolute;
   top: 0;
+  right: 0;
   left: 236px;
   height: 30px;
-  width: 100%;
   border-bottom: 0.1px solid #607b967e;
 }
 
